Deploy React app

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="image" property="og:image" content="content">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content='"To-do list" is a tool that helps to orgnize your day. It simply lists the things that you need to do and allows you to mark them as complete.'
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
