--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="image" property="og:image" content="content">
+    <meta
+      name="image"
+      property="og:image"
+      content="https://raw.githubusercontent.com/LionRouge1/React-todo/dev/todolist.png" 
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
